<resources>
    <string name="app_name">My calculator</string>
    <string name="calculator">calculator</string>
    <string name="dfgb">dfgb</string>
    <string name="myscrean">calculator</string>
    <string name="calclulat">calculator</string>
    <string name="myscreen">calculatorryy</string>
    <string name="myscreen2">"1"</string>
    <string name="_2">"2"</string>
    <string name="_3">"3"</string>
    <string name="__">"/"</string>
    <string name="_4">"4"</string>
    <string name="_5">"5"</string>
    <string name="_6">"6"</string>
    <string name="___">"*"</string>
    <string name="_7">"7"</string>
    <string name="_8">"8"</string>
    <string name="_9">"9"</string>
    <string name="______">"-"</string>
    <string name="_0">"0"</string>
    <string name="qq">"."</string>
    <string name="qqq">"="</string>
    <string name="qqqq">"+"</string>
    <string name="c">"C"</string>
    <string name="del">"^"</string>
    <string name="qqqqqqqq">"("</string>
    <string name="qqqqqqqqqqqq">")"</string>
    <string name="qou">Preant please</string>
    <string name="ra">"="</string>

</resources>
