<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qou"
        android:id="@+id/textView2"
        android:layout_weight="0.10" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:inputType="text"
        android:accessibilityLiveRegion="assertive"
        android:enabled="false"
        android:editable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:text="@string/ra"
        android:editable="true" />

    <TableLayout
        android:layout_width="382dp"
        android:layout_height="327dp"
        android:layout_weight="0.01">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/myscreen2"
                android:id="@+id/button"
                android:layout_column="4"
                android:nestedScrollingEnabled="false"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:id="@+id/button2"
                android:layout_column="10"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:id="@+id/button3"
                android:layout_column="15"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/__"
                android:id="@+id/button20"
                android:layout_column="19"
                android:onClick="oneClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/_4"
                android:id="@+id/button4"
                android:layout_column="4"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:id="@+id/button5"
                android:layout_column="10"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:id="@+id/button6"
                android:layout_column="15"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/___"
                android:id="@+id/button19"
                android:layout_column="19"
                android:onClick="oneClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/_7"
                android:id="@+id/button7"
                android:layout_column="4"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:id="@+id/button8"
                android:layout_column="10"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:id="@+id/button9"
                android:layout_column="15"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/______"
                android:id="@+id/button18"
                android:layout_column="19"
                android:onClick="oneClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/_0"
                android:id="@+id/button10"
                android:layout_column="4"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq"
                android:id="@+id/button11"
                android:layout_column="10"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqq"
                android:id="@+id/button12"
                android:layout_column="15"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqqq"
                android:id="@+id/button17"
                android:layout_column="19"
                android:onClick="oneClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/c"
                android:id="@+id/button13"
                android:layout_column="4"
                android:onClick="Clear" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del"
                android:id="@+id/button14"
                android:layout_column="10"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqqqqqqq"
                android:id="@+id/button15"
                android:layout_column="15"
                android:onClick="oneClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qqqqqqqqqqqq"
                android:id="@+id/button16"
                android:layout_column="19"
                android:onClick="oneClick" />
        </TableRow>
    </TableLayout>
</LinearLayout>